    negotiation capabilities (daryn)

    HADOOP-9688. Add globally unique Client ID to RPC requests. (suresh)

    HADOOP-9683. [RPC v9] Wrap IpcConnectionContext in RPC headers (daryn)

    HADOOP-9698. [RPC v9] Client must honor server's SASL negotiate response (daryn)

    HADOOP-9832. [RPC v9] Add RPC header to client ping (daryn)

  NEW FEATURES

    HADOOP-9283. Add support for running the Hadoop client on AIX. (atm)

    HADOOP-8415. Add getDouble() and setDouble() in 
    org.apache.hadoop.conf.Configuration (Jan van der Lugt via harsh)

    HADOOP-9338. FsShell Copy Commands Should Optionally Preserve File
    Attributes. (Nick White via atm)

    HADOOP-8562. Enhancements to support Hadoop on Windows Server and Windows
    Azure environments. (See breakdown of tasks below for subtasks and
    contributors)

    HADOOP-8469. Make NetworkTopology class pluggable.  (Junping Du via
    szetszwo)

    HADOOP-8470. Add NetworkTopologyWithNodeGroup, a 4-layer implementation
    of NetworkTopology.  (Junping Du via szetszwo)

    HADOOP-9763. Extends LightWeightGSet to support eviction of expired 
    elements. (Tsz Wo (Nicholas) SZE via jing9)

    HADOOP-9762. RetryCache utility for implementing RPC retries. 
    (Suresh Srinivas via jing9)

    HADOOP-9792. Retry the methods that are tagged @AtMostOnce along 
    with @Idempotent. (suresh)

    HADOOP-9509. Implement ONCRPC and XDR. (brandonli)

    HADOOP-9515. Add general interface for NFS and Mount. (brandonli)

  IMPROVEMENTS

    HADOOP-9164. Print paths of loaded native libraries in
    NativeLibraryChecker. (Binglin Chang via llu)

    HADOOP-9253. Capture ulimit info in the logs at service start time.
    (Arpit Gupta via suresh)

    HADOOP-8924. Add maven plugin alternative to shell script to save
    package-info.java. (Chris Nauroth via suresh)

    HADOOP-9117. replace protoc ant plugin exec with a maven plugin. (tucu)

    HADOOP-9279. Document the need to build hadoop-maven-plugins for